// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormRenderer test Render form with actions 1`] = `
<ForwardRef
  formActions={
    Array [
      Object {
        "execute": [MockFunction],
        "name": "complete",
      },
    ]
  }
  formSchema={
    Object {
      "phases": Array [
        "complete",
        "release",
      ],
      "properties": Object {
        "traveller": Object {
          "properties": Object {
            "address": Object {
              "properties": Object {
                "city": Object {
                  "type": "string",
                },
                "country": Object {
                  "type": "string",
                },
                "street": Object {
                  "type": "string",
                },
                "zipCode": Object {
                  "type": "string",
                },
              },
              "type": "object",
            },
            "email": Object {
              "format": "email",
              "type": "string",
            },
            "firstName": Object {
              "type": "string",
            },
            "lastName": Object {
              "type": "string",
            },
            "nationality": Object {
              "type": "string",
            },
          },
          "required": Array [
            "firstName",
            "lastName",
          ],
          "type": "object",
        },
        "trip": Object {
          "output": false,
          "properties": Object {
            "begin": Object {
              "format": "date-time",
              "type": "string",
            },
            "city": Object {
              "type": "string",
            },
            "country": Object {
              "type": "string",
            },
            "end": Object {
              "format": "date-time",
              "type": "string",
            },
            "visaRequired": Object {
              "type": "boolean",
            },
          },
          "type": "object",
        },
        "visaApplication": Object {
          "output": false,
          "properties": Object {
            "city": Object {
              "type": "string",
            },
            "country": Object {
              "type": "string",
            },
            "duration": Object {
              "type": "integer",
            },
            "firstName": Object {
              "type": "string",
            },
            "lastName": Object {
              "type": "string",
            },
            "nationality": Object {
              "type": "string",
            },
            "passportNumber": Object {
              "type": "string",
            },
          },
          "type": "object",
        },
      },
      "type": "object",
    }
  }
  model={
    Object {
      "NodeName": "Apply for visa",
      "Priority": "1",
      "Skippable": "true",
      "TaskName": "VisaApplication",
      "traveller": Object {
        "address": Object {
          "city": "Zerf",
          "country": "Poland",
          "street": "Cabalone",
          "zipCode": "765756",
        },
        "email": "rwhite@gorle.com",
        "firstName": "Rachel",
        "lastName": "White",
        "nationality": "Polish",
      },
      "trip": Object {
        "city": "Boston",
        "country": "US",
        "visaRequired": true,
      },
    }
  }
  onSubmit={[MockFunction]}
  readOnly={false}
>
  <AutoForm
    data-ouia-component-type="form-renderer"
    data-ouia-safe={true}
    disabled={false}
    model={
      Object {
        "NodeName": "Apply for visa",
        "Priority": "1",
        "Skippable": "true",
        "TaskName": "VisaApplication",
        "traveller": Object {
          "address": Object {
            "city": "Zerf",
            "country": "Poland",
            "street": "Cabalone",
            "zipCode": "765756",
          },
          "email": "rwhite@gorle.com",
          "firstName": "Rachel",
          "lastName": "White",
          "nationality": "Polish",
        },
        "trip": Object {
          "city": "Boston",
          "country": "US",
          "visaRequired": true,
        },
      }
    }
    onSubmit={[Function]}
    placeholder={true}
    schema={
      JSONSchemaBridge {
        "_compiledSchema": Object {
          "": Object {
            "phases": Array [
              "complete",
              "release",
            ],
            "properties": Object {
              "traveller": Object {
                "properties": Object {
                  "address": Object {
                    "properties": Object {
                      "city": Object {
                        "type": "string",
                      },
                      "country": Object {
                        "type": "string",
                      },
                      "street": Object {
                        "type": "string",
                      },
                      "zipCode": Object {
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                  "email": Object {
                    "format": "email",
                    "type": "string",
                  },
                  "firstName": Object {
                    "type": "string",
                  },
                  "lastName": Object {
                    "type": "string",
                  },
                  "nationality": Object {
                    "type": "string",
                  },
                },
                "required": Array [
                  "firstName",
                  "lastName",
                ],
                "type": "object",
              },
              "trip": Object {
                "output": false,
                "properties": Object {
                  "begin": Object {
                    "format": "date-time",
                    "type": "string",
                  },
                  "city": Object {
                    "type": "string",
                  },
                  "country": Object {
                    "type": "string",
                  },
                  "end": Object {
                    "format": "date-time",
                    "type": "string",
                  },
                  "visaRequired": Object {
                    "type": "boolean",
                  },
                },
                "type": "object",
              },
              "visaApplication": Object {
                "output": false,
                "properties": Object {
                  "city": Object {
                    "type": "string",
                  },
                  "country": Object {
                    "type": "string",
                  },
                  "duration": Object {
                    "type": "integer",
                  },
                  "firstName": Object {
                    "type": "string",
                  },
                  "lastName": Object {
                    "type": "string",
                  },
                  "nationality": Object {
                    "type": "string",
                  },
                  "passportNumber": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
            },
            "type": "object",
          },
        },
        "getField": [Function],
        "getSubfields": [Function],
        "getType": [Function],
        "schema": Object {
          "phases": Array [
            "complete",
            "release",
          ],
          "properties": Object {
            "traveller": Object {
              "properties": Object {
                "address": Object {
                  "properties": Object {
                    "city": Object {
                      "type": "string",
                    },
                    "country": Object {
                      "type": "string",
                    },
                    "street": Object {
                      "type": "string",
                    },
                    "zipCode": Object {
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
                "email": Object {
                  "format": "email",
                  "type": "string",
                },
                "firstName": Object {
                  "type": "string",
                },
                "lastName": Object {
                  "type": "string",
                },
                "nationality": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "firstName",
                "lastName",
              ],
              "type": "object",
            },
            "trip": Object {
              "output": false,
              "properties": Object {
                "begin": Object {
                  "format": "date-time",
                  "type": "string",
                },
                "city": Object {
                  "type": "string",
                },
                "country": Object {
                  "type": "string",
                },
                "end": Object {
                  "format": "date-time",
                  "type": "string",
                },
                "visaRequired": Object {
                  "type": "boolean",
                },
              },
              "type": "object",
            },
            "visaApplication": Object {
              "output": false,
              "properties": Object {
                "city": Object {
                  "type": "string",
                },
                "country": Object {
                  "type": "string",
                },
                "duration": Object {
                  "type": "integer",
                },
                "firstName": Object {
                  "type": "string",
                },
                "lastName": Object {
                  "type": "string",
                },
                "nationality": Object {
                  "type": "string",
                },
                "passportNumber": Object {
                  "type": "string",
                },
              },
              "type": "object",
            },
          },
          "type": "object",
        },
        "validator": [Function],
      }
    }
    showInlineError={true}
  >
    <MockedComponent />
  </AutoForm>
  <FormFooter
    actions={
      Array [
        Object {
          "execute": [MockFunction],
          "name": "complete",
        },
      ]
    }
    enabled={true}
    onSubmitForm={[Function]}
  >
    <div
      className="kogito-components-common__form-footer-padding-top"
      data-ouia-component-type="form-footer"
      data-ouia-safe={true}
    >
      <ActionList>
        <div
          className="pf-c-action-list"
        >
          <ActionListItem
            key="form-action-0"
          >
            <div
              className="pf-c-action-list__item"
            >
              <Button
                isDisabled={false}
                key="submit-complete"
                onClick={[Function]}
                type="submit"
                variant="primary"
              >
                <ButtonBase
                  innerRef={null}
                  isDisabled={false}
                  onClick={[Function]}
                  type="submit"
                  variant="primary"
                >
                  <button
                    aria-disabled={false}
                    aria-label={null}
                    className="pf-c-button pf-m-primary"
                    data-ouia-component-id="OUIA-Generated-Button-primary-1"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe={true}
                    disabled={false}
                    onClick={[Function]}
                    role={null}
                    type="submit"
                  >
                    Complete
                  </button>
                </ButtonBase>
              </Button>
            </div>
          </ActionListItem>
        </div>
      </ActionList>
    </div>
  </FormFooter>
</ForwardRef>
`;

exports[`FormRenderer test Render form without actions 1`] = `
<ForwardRef
  formActions={Array []}
  formSchema={
    Object {
      "phases": Array [
        "complete",
        "release",
      ],
      "properties": Object {
        "traveller": Object {
          "properties": Object {
            "address": Object {
              "properties": Object {
                "city": Object {
                  "type": "string",
                },
                "country": Object {
                  "type": "string",
                },
                "street": Object {
                  "type": "string",
                },
                "zipCode": Object {
                  "type": "string",
                },
              },
              "type": "object",
            },
            "email": Object {
              "format": "email",
              "type": "string",
            },
            "firstName": Object {
              "type": "string",
            },
            "lastName": Object {
              "type": "string",
            },
            "nationality": Object {
              "type": "string",
            },
          },
          "required": Array [
            "firstName",
            "lastName",
          ],
          "type": "object",
        },
        "trip": Object {
          "output": false,
          "properties": Object {
            "begin": Object {
              "format": "date-time",
              "type": "string",
            },
            "city": Object {
              "type": "string",
            },
            "country": Object {
              "type": "string",
            },
            "end": Object {
              "format": "date-time",
              "type": "string",
            },
            "visaRequired": Object {
              "type": "boolean",
            },
          },
          "type": "object",
        },
        "visaApplication": Object {
          "output": false,
          "properties": Object {
            "city": Object {
              "type": "string",
            },
            "country": Object {
              "type": "string",
            },
            "duration": Object {
              "type": "integer",
            },
            "firstName": Object {
              "type": "string",
            },
            "lastName": Object {
              "type": "string",
            },
            "nationality": Object {
              "type": "string",
            },
            "passportNumber": Object {
              "type": "string",
            },
          },
          "type": "object",
        },
      },
      "type": "object",
    }
  }
  model={
    Object {
      "NodeName": "Apply for visa",
      "Priority": "1",
      "Skippable": "true",
      "TaskName": "VisaApplication",
      "traveller": Object {
        "address": Object {
          "city": "Zerf",
          "country": "Poland",
          "street": "Cabalone",
          "zipCode": "765756",
        },
        "email": "rwhite@gorle.com",
        "firstName": "Rachel",
        "lastName": "White",
        "nationality": "Polish",
      },
      "trip": Object {
        "city": "Boston",
        "country": "US",
        "visaRequired": true,
      },
    }
  }
  onSubmit={[MockFunction]}
  readOnly={false}
>
  <AutoForm
    data-ouia-component-type="form-renderer"
    data-ouia-safe={true}
    disabled={false}
    model={
      Object {
        "NodeName": "Apply for visa",
        "Priority": "1",
        "Skippable": "true",
        "TaskName": "VisaApplication",
        "traveller": Object {
          "address": Object {
            "city": "Zerf",
            "country": "Poland",
            "street": "Cabalone",
            "zipCode": "765756",
          },
          "email": "rwhite@gorle.com",
          "firstName": "Rachel",
          "lastName": "White",
          "nationality": "Polish",
        },
        "trip": Object {
          "city": "Boston",
          "country": "US",
          "visaRequired": true,
        },
      }
    }
    onSubmit={[Function]}
    placeholder={true}
    schema={
      JSONSchemaBridge {
        "_compiledSchema": Object {
          "": Object {
            "phases": Array [
              "complete",
              "release",
            ],
            "properties": Object {
              "traveller": Object {
                "properties": Object {
                  "address": Object {
                    "properties": Object {
                      "city": Object {
                        "type": "string",
                      },
                      "country": Object {
                        "type": "string",
                      },
                      "street": Object {
                        "type": "string",
                      },
                      "zipCode": Object {
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                  "email": Object {
                    "format": "email",
                    "type": "string",
                  },
                  "firstName": Object {
                    "type": "string",
                  },
                  "lastName": Object {
                    "type": "string",
                  },
                  "nationality": Object {
                    "type": "string",
                  },
                },
                "required": Array [
                  "firstName",
                  "lastName",
                ],
                "type": "object",
              },
              "trip": Object {
                "output": false,
                "properties": Object {
                  "begin": Object {
                    "format": "date-time",
                    "type": "string",
                  },
                  "city": Object {
                    "type": "string",
                  },
                  "country": Object {
                    "type": "string",
                  },
                  "end": Object {
                    "format": "date-time",
                    "type": "string",
                  },
                  "visaRequired": Object {
                    "type": "boolean",
                  },
                },
                "type": "object",
              },
              "visaApplication": Object {
                "output": false,
                "properties": Object {
                  "city": Object {
                    "type": "string",
                  },
                  "country": Object {
                    "type": "string",
                  },
                  "duration": Object {
                    "type": "integer",
                  },
                  "firstName": Object {
                    "type": "string",
                  },
                  "lastName": Object {
                    "type": "string",
                  },
                  "nationality": Object {
                    "type": "string",
                  },
                  "passportNumber": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
            },
            "type": "object",
          },
        },
        "getField": [Function],
        "getSubfields": [Function],
        "getType": [Function],
        "schema": Object {
          "phases": Array [
            "complete",
            "release",
          ],
          "properties": Object {
            "traveller": Object {
              "properties": Object {
                "address": Object {
                  "properties": Object {
                    "city": Object {
                      "type": "string",
                    },
                    "country": Object {
                      "type": "string",
                    },
                    "street": Object {
                      "type": "string",
                    },
                    "zipCode": Object {
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
                "email": Object {
                  "format": "email",
                  "type": "string",
                },
                "firstName": Object {
                  "type": "string",
                },
                "lastName": Object {
                  "type": "string",
                },
                "nationality": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "firstName",
                "lastName",
              ],
              "type": "object",
            },
            "trip": Object {
              "output": false,
              "properties": Object {
                "begin": Object {
                  "format": "date-time",
                  "type": "string",
                },
                "city": Object {
                  "type": "string",
                },
                "country": Object {
                  "type": "string",
                },
                "end": Object {
                  "format": "date-time",
                  "type": "string",
                },
                "visaRequired": Object {
                  "type": "boolean",
                },
              },
              "type": "object",
            },
            "visaApplication": Object {
              "output": false,
              "properties": Object {
                "city": Object {
                  "type": "string",
                },
                "country": Object {
                  "type": "string",
                },
                "duration": Object {
                  "type": "integer",
                },
                "firstName": Object {
                  "type": "string",
                },
                "lastName": Object {
                  "type": "string",
                },
                "nationality": Object {
                  "type": "string",
                },
                "passportNumber": Object {
                  "type": "string",
                },
              },
              "type": "object",
            },
          },
          "type": "object",
        },
        "validator": [Function],
      }
    }
    showInlineError={true}
  >
    <MockedComponent />
  </AutoForm>
  <FormFooter
    actions={Array []}
    enabled={true}
    onSubmitForm={[Function]}
  />
</ForwardRef>
`;
